--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      API_KEY : ${{ secrets.API_KEY }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
